<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sg.assignment.shopback.moviediscovery.ui.activities.DetailsScreenActivity"
    tools:showIn="@layout/activity_detail_screen"
    android:layout_marginBottom="50dp"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/drop_shadow" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">







            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#fff"

                >


                <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_header"
                    android:textSize="14dp"
                    android:textColor="@color/colorSub"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    />





                <LinearLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >




                    <sg.assignment.shopback.moviediscovery.ui.views.AppTextView

                        android:id="@+id/movie_title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="17dp"
                        android:textColor="@color/colorTex"
                        />

                    <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                        android:layout_marginTop="16dp"
                        android:id="@+id/release_date"
                        android:layout_weight="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_header"
                        android:textSize="12dp"
                        android:textColor="@color/colorTex"
                        />



                    <LinearLayout
                        android:layout_marginTop="10dp"

                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                            android:textSize="14dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popularity_header"
                            android:gravity="center"
                            android:textColor="@color/colorTex"
                            android:textStyle="bold"
                            />

                        <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                            android:id="@+id/movie_popularity"
                            android:maxLines="2"
                            android:textSize="14sp"
                            android:gravity="center"
                            android:background="@drawable/popularity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1.0000"
                            android:padding="5dp"
                            android:layout_marginLeft="3dp"
                            android:textColor="#fff"
                            />

                    </LinearLayout>
                </LinearLayout>




                <View
                    android:layout_marginTop="11dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colordevider"

                    />





                <LinearLayout
                    android:id="@+id/linear_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                        android:padding="16dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/synopsis_header"
                        android:textSize="13dp"
                        android:textColor="@color/colorTex"
                        />

                    <LinearLayout
                        android:id="@+id/linear_synopsis1"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <ImageView
                            android:layout_marginTop="16dp"
                            android:layout_gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/plus"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/linear_synopsis2"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_marginTop="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/minus"


                            />
                    </LinearLayout>
                </LinearLayout>


                <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                    android:visibility="gone"
                    android:layout_margin="16dp"
                    android:id="@+id/synopsis"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="12.5dp"
                    android:lineSpacingExtra="4.5dp"
                    android:textColor="@color/colorTex"
                    />



                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colordevider"

                    />




                <LinearLayout
                    android:id="@+id/linear_genres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                        android:padding="16dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genres_header"
                        android:textSize="13dp"
                        android:textColor="@color/colorTex"
                        />

                    <LinearLayout
                        android:id="@+id/linear_genres1"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <ImageView
                            android:layout_marginTop="16dp"
                            android:layout_gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/plus"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/linear_genres2"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <ImageView
                            android:layout_marginTop="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/minus"


                            />
                    </LinearLayout>
                </LinearLayout>

                <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                    android:visibility="gone"
                    android:layout_margin="16dp"
                    android:id="@+id/genres"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="12.5dp"
                    android:lineSpacingExtra="4.5dp"
                    android:textColor="@color/colorTex"
                    />



                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colordevider"

                    />





                <LinearLayout
                    android:id="@+id/linear_languages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                        android:padding="16dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/languages_header"
                        android:textSize="13dp"
                        android:textColor="@color/colorTex"
                        />

                    <LinearLayout
                        android:id="@+id/linear_languages1"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <ImageView
                            android:layout_marginTop="16dp"
                            android:layout_gravity="center_vertical"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/plus"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/linear_languages2"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <ImageView
                            android:layout_marginTop="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/minus"

                            />
                    </LinearLayout>
                </LinearLayout>

                <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                    android:visibility="gone"
                    android:layout_margin="16dp"
                    android:id="@+id/languages"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="12.5dp"
                    android:lineSpacingExtra="4.5dp"
                    android:textColor="@color/colorTex"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colordevider"

                    />



                <LinearLayout
                    android:id="@+id/linear_duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                        android:padding="16dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_header"
                        android:textSize="13dp"
                        android:textColor="@color/colorTex"
                        />

                    <LinearLayout
                        android:id="@+id/linear_duration1"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <ImageView
                            android:layout_marginTop="16dp"
                            android:layout_gravity="center_vertical"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/plus"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/linear_duration2"
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"

                        >
                        <ImageView
                            android:layout_marginTop="24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/minus"

                            />
                    </LinearLayout>
                </LinearLayout>

                <sg.assignment.shopback.moviediscovery.ui.views.AppTextView
                    android:visibility="gone"
                    android:layout_margin="16dp"
                    android:id="@+id/duration"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="12.5dp"
                    android:lineSpacingExtra="4.5dp"
                    android:textColor="@color/colorTex"
                    />


                <View
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colordevider"

                    />



            </LinearLayout>
        </LinearLayout>




</LinearLayout>




</android.support.v4.widget.NestedScrollView>
